# locket

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.op.yaml  compose.sample.yaml  dist-workspace.toml  docker-bake.hcl  release.toml  runfile.toml
.cargo/: config.toml
.github/: FUNDING.yml  build-setup.yml  renovate.json
.github/scripts/: build-op-bridge-artifacts.sh  build-op-bridge.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docker/: .dockerignore  Dockerfile  build-plugin.sh  compose.sample.yaml  docker-bake.hcl  locket.toml
docker/plugin/: config.json
docker/tests/exec/: compose.yaml  locket.env
docker/tests/provider/: compose.yaml
docker/tests/sidecar/: compose.tests.yaml
docker/tests/sidecar/secrets/bws/config/: many.txt  secret.txt
docker/tests/sidecar/secrets/infisical/: secret.txt
docker/tests/sidecar/secrets/infisical/config/: many.txt
docker/tests/sidecar/secrets/op/: secret.txt
docker/tests/sidecar/secrets/op/config/: many.txt
docker/tests/volume/: compose.yaml
docs/: CONFIGURATION.md  compose.md  exec.md  healthcheck.md  inject.md  run.md  volume.md
docs/providers/: bao.md  bws.md  connect.md  infisical.md  op.md
examples/: docs.rs
locket_derive/: Cargo.toml
locket_derive/src/: lib.rs
src/: cli.rs  cmd.rs  compose.rs  config.rs  env.rs  envvars.rs  error.rs  events.rs  exits.rs  health.rs  lib.rs  logging.rs  main.rs  mirror.rs  path.rs  process.rs  provider.rs  secrets.rs  signal.rs  template.rs  volume.rs  watch.rs  write.rs
src/cmd/: compose.rs  config.rs  exec.rs  healthcheck.rs  inject.rs  run.rs  volume.rs
src/cmd/compose/: down.rs  meta.rs  up.rs
src/cmd/config/: compose.rs  exec.rs  healthcheck.rs  inject.rs  volume.rs
src/config/: de.rs  exec.rs  inject.rs  parsers.rs  types.rs
src/provider/: auth.rs  bao.rs  bws.rs  config.rs  connect.rs  infisical.rs  macros.rs  managed.rs  op.rs  references.rs  types.rs
src/provider/config/: bao.rs  bws.rs  connect.rs  infisical.rs  op.rs
src/provider/op/: bridge.rs  discover.rs  embedded.rs  protocol.rs  transport.rs
src/provider/op/bridge/: discover.rs  embedded.rs  protocol.rs  transport.rs
src/provider/references/: bao.rs  bws.rs  infisical.rs  op.rs
src/secrets/: config.rs  file.rs  fs.rs  manager.rs  path.rs  registry.rs  types.rs  utils.rs
src/volume/: api.rs  config.rs  driver.rs  error.rs  registry.rs  service.rs  types.rs
src/watch/: file.rs  process.rs
tests/: collisions.rs  op_bridge.rs  parity.rs  plan.rs  provider.rs  sanitize.rs  validation.rs
tests/docker/: compose.tests.yaml
tests/docker/exec/: locket.env  override.env
tests/docker/provider/: compose.yaml
tests/docker/sidecar/: .env  compose.tests.yaml  verify.sh
tests/unit/: provider.rs  sanitize.rs
tools/op-bridge/: go.mod  go.sum  handler.go  handler_test.go  main.go  protocol.go  protocol_test.go
tools/op-bridge/internal/hardening/: darwin.go  linux.go  other.go
xtask/: Cargo.toml
xtask/src/: docs.rs  lib.rs  main.rs  plugin.rs
