[package]
name = "locket"
version = "0.16.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Brian Bradley <brian.bradley.p@gmail.com>"]
description = "Helper tool for secret injection as a process dependency"
repository = "https://github.com/bpbradley/locket"
homepage = "https://github.com/bpbradley/locket"
documentation = "https://docs.rs/locket"
readme = "README.md"
keywords = ["secrets", "docker"]
categories = ["command-line-utilities", "config"]

[workspace]
members = [".", "locket_derive", "xtask"]

[features]
# Base release features
op = ["tokio/process", "dep:percent-encoding"]
connect = ["dep:reqwest", "dep:percent-encoding"]
bws = ["dep:bitwarden", "dep:uuid", "dep:rustls-webpki"]
compose = ["dep:dotenvy"]
infisical = ["dep:reqwest", "dep:serde_urlencoded", "dep:percent-encoding", "dep:regex"]
exec = ["dep:dotenvy", "dep:nix", "tokio/process"]

# Used to compile with mock types for testing
testing = []
# Generates introspection types that are necessary for documentation generation
locket-docs = []

full = ["op", "connect", "bws", "infisical", "compose", "exec"]
dev = ["locket-docs", "testing", "full"]
default = ["full"]

[dependencies]
locket_derive = { path = "./locket_derive" }
clap = { version = "4", features = ["derive", "env", "string"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
notify = "8"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
secrecy = {version = "0.10.3", features = ["serde"]}
sysexits = "0.10"
indexmap = "2"
async-trait = "0.1"
sanitize-filename = "0.6"
humantime = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
futures = { version = "0.3"}
url = { version = "2", features = ["serde"]}
toml = {version = "0.9"}
percent-encoding = { version = "2.3", optional = true }
bitwarden = { version = "1", features=["secrets"], optional = true }
uuid = { version = "1", optional = true }
dotenvy = {version = "0.15", optional = true}
nix = { version = "0.30", features = ["signal", "term"], optional = true}
serde_urlencoded = { version = "0.7", optional = true }
# bitwarden sdk needs to update their crate. Cannot build without this.
# https://github.com/bitwarden/sdk-sm/issues/1244
rustls-webpki = { version = "0.102", features = ["std"], optional = true }
# bitwarden dependencies are further causing issues in reqwest >= 0.13.
# I don't see an immediate fix for this, so for now will revert to 0.12.24+ and use rustls-tls-webpki-roots again.
# The only other way to fix it that I could find was to install 0.13 reqwest with rustls-no-provider,
# and then manually call `let _ = rustls::crypto::ring::default_provider().install_default();` to handle certs manually.
reqwest = { version = ">=0.12.24, <0.13", features = ["json", "rustls-tls-webpki-roots"], default-features = false, optional = true }
regex = { version = "1.7", optional = true }

[dev-dependencies]
assert_fs = "1"

[lib]
name = "locket"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
