[package]
name = "locket_derive"
version = "0.17.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Brian Bradley <brian.bradley.p@gmail.com>"]
description = "proc macro to support layered conigurations in locket"
repository = "https://github.com/bpbradley/locket"
homepage = "https://github.com/bpbradley/locket"
publish = true

[package.metadata.release]
pre-release-hook = ["sh", "-c", "true"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = "1.0"
