[package]
name = "locket_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Brian Bradley <brian.bradley.p@gmail.com>"]
description = "proc macro to support layered conigurations in locket"
repository.workspace = true
homepage.workspace = true
publish = true

[package.metadata.release]
pre-release-hook = ["sh", "-c", "true"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
