[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo"] }
indexmap = "2"
locket = { path = "..", features = ["dev"]}
toml = "1"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
