[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["cargo"] }
indexmap.workspace = true
locket = { path = "..", features = ["dev"] }
toml.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
